가로 가운데 정렬 수정

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,18 +25,20 @@
 
 <div class='container'>
   <section class='info-parent'>
-    <h3 class='sementic-hidden-text'>가로 배치 방법(feat. `float`)</h3>
-    <div class='info-child'>
-      <img class='info-image' src='http://cfile28.uf.tistory.com/image/2256634055E7B9981F0D74' alt/>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, harum aperiam reprehenderit quaerat quo beatae laudantium placeat quisquam eius dicta labore cum! Nihil tenetur sed repudiandae ipsa eveniet natus similique!</p>
-    </div>
-    <div class='info-child'>
-      <img class='info-image' src='http://www.kccosd.org/files/blowing_in_the_wind.jpg' alt/>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, harum aperiam reprehenderit quaerat quo beatae laudantium placeat quisquam eius dicta labore cum! Nihil tenetur sed repudiandae ipsa eveniet natus similique!</p>
-    </div>
-    <div class='info-child'>
-      <img class='info-image' src='http://cfile7.uf.tistory.com/image/2779024E53C8FC56316DA1' alt/>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, harum aperiam reprehenderit quaerat quo beatae laudantium placeat quisquam eius dicta labore cum! Nihil tenetur sed repudiandae ipsa eveniet natus similique!</p>
+    <h3 class='sementic-hidden-text'>가로 중앙 정렬(feat. `박스모델`), 가로 배치 방법(feat. `float`)</h3>
+    <div class='center'>
+      <div class='info-child'>
+        <img class='info-image' src='http://cfile28.uf.tistory.com/image/2256634055E7B9981F0D74' alt/>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, harum aperiam reprehenderit quaerat quo beatae laudantium placeat quisquam eius dicta labore cum! Nihil tenetur sed repudiandae ipsa eveniet natus similique!</p>
+      </div>
+      <div class='info-child'>
+        <img class='info-image' src='http://www.kccosd.org/files/blowing_in_the_wind.jpg' alt/>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, harum aperiam reprehenderit quaerat quo beatae laudantium placeat quisquam eius dicta labore cum! Nihil tenetur sed repudiandae ipsa eveniet natus similique!</p>
+      </div>
+      <div class='info-child'>
+        <img class='info-image' src='http://cfile7.uf.tistory.com/image/2779024E53C8FC56316DA1' alt/>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, harum aperiam reprehenderit quaerat quo beatae laudantium placeat quisquam eius dicta labore cum! Nihil tenetur sed repudiandae ipsa eveniet natus similique!</p>
+      </div>
     </div>
   </div>
   
