--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -46,13 +46,13 @@
 
 .center-section {
   position: relative;
-  color: white;
+  color: black;
   text-align: center;
-  height: 600px;
+  height: 350px;
   -webkit-background-size: cover;
   background-size: cover;
   
-  background-image: url(https://www.colourbox.com/preview/3481156-cityscape-background-for-your-design-urban-art.jpg);
+  background-image: url(http://cfile30.uf.tistory.com/image/1950F9465110B70F21D594);
   background-repeat: no-repeat;
   background-position: center center;
   
@@ -77,7 +77,11 @@
 .info-parent {
   padding: 30px 0;
 }
-.info-parent::after {
+.info-parent .center {
+  width: 660px;
+  margin: 0 auto;
+}
+.info-parent .center::after {
   content: '';
   display: block;
   clear: both;
@@ -86,7 +90,7 @@
 .info-child {
   width: 200px;
   float: left;
-  margin-right: 40px;
+  margin-right: 30px;
 }
 
 .info-child:last-child {
