--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,12 +40,27 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, harum aperiam reprehenderit quaerat quo beatae laudantium placeat quisquam eius dicta labore cum! Nihil tenetur sed repudiandae ipsa eveniet natus similique!</p>
       </div>
     </div>
-  </div>
+  </section>
+</div>
   
-  <footer class='footer'>
-    <p>HTML & CSS</p>
-  </footer>
-</section>
-  
+<div class='container'>
+  <section>
+    <h3 class='sementic-hidden-text'>컨텐츠 배치(feat. flexbox)</h3>
+    
+    <div class='flex-parent'>
+      <div class='flex-child red'>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, harum aperiam reprehenderit quaerat quo beatae laudantium placeat quisquam eius dicta labore cum! Nihil tenetur sed repudiandae ipsa eveniet natus similique!</p>
+      </div>
+      <div class='flex-child yellow'>
+        <p>Lorem ipsum dolor</p>
+      </div>
+      <div class='flex-child blue'>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, harum aperiam reprehenderit quaerat quo beatae laudantium placeat quisquam eius dicta labore cum! Nihil tenetur sed repudiandae ipsa eveniet natus similique!</p>
+      </div>
+    </div>
+  </section>
+</div>  
 
-
+<footer class='footer'>
+  <p>HTML & CSS</p>
+</footer>
