높이를 viewport 높이로 설정

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -49,10 +49,12 @@
   color: black;
   text-align: center;
   height: 350px;
+  // height: 100vh; // viewport의 높이
   -webkit-background-size: cover;
   background-size: cover;
   
   background-image: url(http://cfile30.uf.tistory.com/image/1950F9465110B70F21D594);
+  
   background-repeat: no-repeat;
   background-position: center center;
   
